# NumericalMethods

./: 1-s2.0-S0009250916300847-mmc1.xlsx  CMakeLists.txt  README.md  dash3dplot.py  empty_GCMC.cc  empty_GCMC_N2.cc  empty_GCMC_water.cc  lattice_GCMC.cc  run.py  run_N2.py  sampleCpp.cc  scale_and_replicate_fcc.py
GrapheneResults/: OutputDataNew_CH4_graphite-sheet_3-layers_40A.csv
fcc_lattices/: fcc_d_1.000_fractional_coords.xyz  fcc_d_10.000_fractional_coords.xyz  fcc_d_4.000_fractional_coords.xyz  fcc_d_6.000_fractional_coords.xyz  fcc_d_7.000_fractional_coords.xyz  fcc_d_8.000_fractional_coords.xyz  fcc_d_9.000_fractional_coords.xyz
include/: odeFuncs.h  rkSolvers.h
positions/: position_-5000.00_10000.csv  position_-5000.00_11000.csv  position_-5000.00_12000.csv  position_-5000.00_13000.csv  position_-5000.00_14000.csv  position_-5000.00_15000.csv  position_-5000.00_16000.csv  position_-5000.00_17000.csv  position_-5000.00_18000.csv  position_-5000.00_19000.csv
results_empty_box/: SIM_U-1202.56.txt  SIM_U-1443.07.txt  SIM_U-1683.58.txt  SIM_U-1924.09.txt  SIM_U-2164.60.txt  SIM_U-2405.11.txt  SIM_U-481.02.txt  SIM_U-5000.00.txt  SIM_U-721.53.txt  SIM_U-962.04.txt
results_empty_box_N2/: SIM_U-1202.56.txt  SIM_U-1443.07.txt  SIM_U-1683.58.txt  SIM_U-1924.09.txt  SIM_U-2164.60.txt  SIM_U-2405.11.txt  SIM_U-481.02.txt  SIM_U-5000.00.txt  SIM_U-721.53.txt  SIM_U-962.04.txt
results_lattice_model/: SIM_U-1202.56_d10.00.txt  SIM_U-1202.56_d4.00.txt  SIM_U-1202.56_d5.00.txt  SIM_U-1202.56_d6.00.txt  SIM_U-1202.56_d7.00.txt  SIM_U-1202.56_d8.00.txt  SIM_U-1202.56_d9.00.txt  SIM_U-1443.07_d10.00.txt  SIM_U-1443.07_d4.00.txt  SIM_U-1443.07_d5.00.txt  SIM_U-1443.07_d6.00.txt  SIM_U-1443.07_d7.00.txt  SIM_U-1443.07_d8.00.txt  SIM_U-1443.07_d9.00.txt  SIM_U-1683.58_d10.00.txt  SIM_U-1683.58_d4.00.txt  SIM_U-1683.58_d5.00.txt  SIM_U-1683.58_d6.00.txt  SIM_U-1683.58_d7.00.txt  (+109 more)
src/: main.cpp
(+471 files in other folders)
